Fixing z-index

--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@
   transform: translateY(40px);
   animation: fadeInUp 1s forwards;
   position: relative;
+  z-index: 1;
 
 }
 
